--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -176,9 +176,11 @@
                         font-size:130px; font-weight:500;
                     }
                     .context {
+                        display:flex; flex-direction:column; justify-content:space-between;
+                        height:55%;
                         h2 {
-                            font-size:42px; color:#222;
-                            margin:25px 0; font-weight:400;
+                            font-size:25px; color:#222;
+                            font-weight:400;
                             span {font-weight:bold; margin-right:10px;}
                         }
                     }
