--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -129,9 +129,15 @@
                 }
             }
             .right_img {
-                width:50%;
+                width:50%; overflow:hidden;
+                &:hover {
+                    img {
+                        transform:scale(1.05);
+                    }
+                }
                 img{
                     width:100%;
+                    transition:all 0.5s;
                 }
             }
         }
