--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,58 @@ input {
   background-color: #000;
   color: #fff;
 }
+#wrap .header .center button {
+  font-size: 30px;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 50px;
+  background-color: transparent;
+  font-weight: bold;
+  position: absolute;
+  right: 50px;
+  cursor: pointer;
+  display: none;
+}
+#wrap .header .ham {
+  display: none;
+  background-color: #fff;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#wrap .header .ham ul {
+  display: flex;
+  flex-direction: column;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 100px auto;
+  gap: 30px;
+}
+#wrap .header .ham ul li a {
+  color: #000;
+  font-size: 30px;
+  padding: 5px 10px;
+  border-radius: 35px;
+  color: #000;
+}
+#wrap .header .ham ul li.black a {
+  background-color: #000;
+  color: #fff;
+}
+#wrap .header .ham button {
+  font-size: 30px;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 50px;
+  background-color: transparent;
+  font-weight: bold;
+  position: absolute;
+  right: 50px;
+  top: 0;
+  cursor: pointer;
+}
 #wrap .main_banner {
   position: relative;
   display: flex;
@@ -113,16 +165,7 @@ input {
   background-color: #222;
   margin-left: 10px;
   transform: translateY(15px);
-  -webkit-animation: blink 0.5s linear 0s infinite normal backwards;
-          animation: blink 0.5s linear 0s infinite normal backwards;
-}
-@-webkit-keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+  animation: blink 0.5s linear 0s infinite normal backwards;
 }
 @keyframes blink {
   0% {
@@ -166,21 +209,16 @@ input {
   flex-direction: column;
   justify-content: center;
   padding-left: 50px;
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
 }
-#wrap .container .artwork .left_text .box .num {
-  font-size: 28px;
-  margin-bottom: 30px;
-}
 #wrap .container .artwork .left_text .box .title {
-  font-size: 44px;
+  font-size: 35px;
+}
+#wrap .container .artwork .left_text .box .title .num {
+  font-size: 28px;
 }
 #wrap .container .artwork .left_text .box h2 {
-  color: #222;
-}
-#wrap .container .artwork .left_text .box h2 a {
   color: #222;
 }
 #wrap .container .artwork .left_text .box ul {
@@ -190,6 +228,7 @@ input {
 #wrap .container .artwork .left_text .box ul li {
   color: #222;
   margin: 30px 0;
+  line-height: 1.3;
 }
 #wrap .container .artwork .left_text .box ul li span {
   font-weight: bold;
@@ -241,9 +280,6 @@ input {
   background-color: #000;
 }
 #wrap .container .artwork.black .box h2 {
-  color: #fff;
-}
-#wrap .container .artwork.black .box h2 a {
   color: #fff;
 }
 #wrap .container .artwork.black .box ul li {
@@ -313,37 +349,158 @@ input {
   font-size: 13px;
 }
 
+@media (max-width: 1300px) {
+  #wrap .header .center ul li {
+    margin-left: 10px;
+  }
+}
 @media (max-width: 1200px) {
   #wrap .header .center {
     padding: 25px 50px;
+  }
+  #wrap .header .center ul {
+    display: none;
+  }
+  #wrap .header .center button {
+    display: block;
+  }
+  #wrap .main_banner {
+    min-height: 1050px;
+  }
+  #wrap .main_banner .center .bg {
+    font-size: 250px;
   }
   #wrap .main_banner .center .top_line h2 {
     font-size: 100px;
     width: 750px;
   }
+  #wrap .main_banner .center .top_line h3 {
+    font-size: 25px;
+  }
   #wrap .main_banner .center .bot_line {
     width: 90%;
     right: 50px;
+  }
+  #wrap .main_banner .center .bot_line h2 {
+    font-size: 25px;
+  }
+  #wrap .container .artwork .left_text .box .title {
+    font-size: 25px;
+  }
+  #wrap .container .artwork .left_text .box .title .num {
+    font-size: 25px;
+  }
+  #wrap .container .artwork .left_text .box ul li {
+    font-size: 13px;
+    margin: 20px 0;
+  }
+  #wrap .container .artwork .left_text .box .address a {
+    font-size: 20px;
   }
 }
 @media (max-width: 1000px) {
   #wrap .header .center {
     padding: 25px 50px;
   }
-  #wrap .main_banner .center .top_line h2 {
-    width: 100%;
+  #wrap .main_banner .center .bg {
+    font-size: 180px;
   }
-  #wrap .main_banner .center .bot_line {
-    width: 85%;
-  }
-}
-@media (max-width: 768px) {
   #wrap .main_banner .center .top_line h2 {
     font-size: 80px;
     width: 100%;
   }
+  #wrap .main_banner .center .top_line h2::after {
+    width: 8px;
+    height: 100px;
+  }
+  #wrap .main_banner .center .top_line h3 {
+    font-size: 20px;
+  }
+  #wrap .main_banner .center .bot_line {
+    width: 85%;
+  }
+  #wrap .main_banner .center .bot_line h2 {
+    font-size: 20px;
+  }
+  #wrap .main_banner .center .bot_line ul li {
+    font-size: 14px;
+  }
+  #wrap .container .artwork .left_text .box .title {
+    font-size: 20px;
+  }
+  #wrap .container .artwork .left_text .box .title .num {
+    font-size: 20px;
+  }
+  #wrap .container .artwork .left_text .box ul li {
+    font-size: 12px;
+    margin: 15px 0;
+  }
+  #wrap .container .artwork .left_text .box .address a {
+    font-size: 27px;
+  }
+  #wrap .container .contact .center .bg {
+    font-size: 180px;
+  }
+  #wrap .container .contact .center .text_box .contact_me {
+    font-size: 100px;
+  }
+  #wrap .container .contact .center .text_box .context h2 {
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  #wrap .main_banner {
+    min-height: 750px;
+  }
+  #wrap .main_banner .center .bg {
+    font-size: 150px;
+  }
+  #wrap .main_banner .center .top_line h2 {
+    font-size: 40px;
+    width: 100%;
+  }
+  #wrap .main_banner .center .top_line h2::after {
+    width: 8px;
+    height: 60px;
+  }
+  #wrap .main_banner .center .top_line h3 {
+    font-size: 15px;
+  }
   #wrap .main_banner .center .bot_line {
     width: 80%;
     right: 80px;
+  }
+  #wrap .main_banner .center .bot_line h2 {
+    font-size: 15px;
+  }
+  #wrap .main_banner .center .bot_line ul li {
+    font-size: 10px;
+    margin: 10px 0;
+  }
+  #wrap .container .artwork .left_text .box .title {
+    font-size: 15px;
+  }
+  #wrap .container .artwork .left_text .box .title .num {
+    font-size: 15px;
+  }
+  #wrap .container .artwork .left_text .box ul li {
+    font-size: 10px;
+  }
+  #wrap .container .artwork .left_text .box .address a {
+    font-size: 15px;
+  }
+  #wrap .container .contact .center .bg {
+    font-size: 150px;
+  }
+  #wrap .container .contact .center .text_box .contact_me {
+    font-size: 80px;
+  }
+  #wrap .container .contact .center .text_box .context h2 {
+    font-size: 15px;
+  }
+}
+@media (max-width: 600px) {
+  #wrap .container .contact .center .text_box .contact_me {
+    font-size: 60px;
   }
 }
