--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -25,6 +25,61 @@
                     }
                 }
             }
+            button {
+                font-size: 30px;
+                background-color: transparent;
+                font-weight: bold;
+                font-size: 50px;
+                background-color: transparent;
+                font-weight: bold;
+                position: absolute;
+                right: 50px;
+                cursor: pointer;
+                display: none;
+            }
+        }
+        .ham {
+            display: none;
+            background-color: #fff;
+            width: 100vw;
+            height: 100vh;
+            position: absolute;
+            left: 0;
+            top: 0;
+            ul {
+                display: flex;
+                flex-direction: column;
+                width: fit-content;
+                margin: 100px auto;
+                gap: 30px;
+                li {
+                    a {
+                        color:#000;
+                        font-size: 30px;
+                        padding:5px 10px;
+                        border-radius:35px;
+                        color:#000;
+                    }
+                }
+                li.black {
+                    a {
+                        background-color:#000;
+                        color:#fff;
+                    }
+                }
+            }
+            button {
+                font-size: 30px;
+                background-color: transparent;
+                font-weight: bold;
+                font-size: 50px;
+                background-color: transparent;
+                font-weight: bold;
+                position: absolute;
+                right: 50px;
+                top: 0;
+                cursor: pointer;
+            }
         }
     }
     .main_banner {
@@ -87,17 +142,19 @@
                     display:flex; flex-direction:column; justify-content:center;
                     padding-left:50px;
                     position:sticky; top:0;
-                    .num {font-size:28px; margin-bottom:30px;}
-                    .title {font-size:44px;}
+                    .title {
+                        .num {font-size:28px;}
+                        font-size:35px;
+                    }
                     h2 {
                         color:#222;
-                        a{color:#222;}
                     }
                     ul {
                         width:87%;
                         margin:25px 0;
                         li {
                             color:#222; margin:30px 0;
+                            line-height: 1.3;
                             span {font-weight:bold; margin-right:5px;}
                             a {
                                 color:#222;
@@ -146,7 +203,6 @@
             .box {
                 h2 {
                     color:#fff;
-                    a{color:#fff;}
                 }
                 ul {
                     li {
@@ -205,24 +261,66 @@
     }
 }
 
+
+@media (max-width:1300px) {
+    #wrap {
+        .header {
+            .center {
+                ul {
+                    li {margin-left: 10px;}
+                }
+            }
+        }
+    }
+}
+
 @media (max-width:1200px) {
     #wrap {
         .header {
             .center {
                 padding:25px 50px;
+                ul {
+                    display: none;
+                }
+                button {display: block;}
             }
         }
         .main_banner {
+            min-height: 1050px;
             .center {
+                .bg {font-size: 250px;}
                 .top_line {
                     h2 {
                         font-size:100px;
                         width:750px;
                     }
+                    h3 {font-size: 25px;}
                 }
                 .bot_line {
                     width:90%;
                     right:50px;
+                    h2 {font-size: 25px;}
+                }
+            }
+        }
+        .container {
+            .artwork {
+                .left_text {
+                    .box {
+                        .title {
+                            font-size: 25px;
+                            .num {font-size: 25px;}
+                        }
+                        ul {
+                            li {
+                                font-size: 13px;
+                                margin: 20px 0;
+                            }
+                        }
+                        .address {
+                            a {font-size: 20px;}
+                        }
+                    }
                 }
             }
         }
@@ -238,13 +336,60 @@
         }
         .main_banner {
             .center {
+                .bg {font-size: 180px;}
                 .top_line {
                     h2 {
+                        font-size: 80px;
                         width:100%;
+                        &::after {
+                            width:8px;
+                            height:100px;
+                        }
                     }
+                    h3 {font-size: 20px;}
                 }
                 .bot_line {
                     width:85%;
+                    h2 {font-size: 20px;}
+                    ul {
+                        li {
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
+        .container {
+            .artwork {
+                .left_text {
+                    .box {
+                        .title {
+                            font-size: 20px;
+                            .num {font-size: 20px;}
+                        }
+                        ul {
+                            li {
+                                font-size: 12px;
+                                margin: 15px 0;
+                            }
+                        }
+                        .address {
+                            a {font-size: 27px;}
+                        }
+                    }
+                }
+            }
+            .contact {
+                .center {
+                    .bg {font-size: 180px;}
+                    .text_box {
+                        .contact_me {
+                            font-size: 100px;
+                        }
+                        .context {
+                            h2 {font-size: 20px;}
+                        }
+                    }
                 }
             }
         }
@@ -254,16 +399,85 @@
 @media (max-width:768px) {
     #wrap {
         .main_banner {
+            min-height: 750px;
             .center {
+                .bg {font-size: 150px;}
                 .top_line {
                     h2 {
-                        font-size:80px;
+                        font-size:40px;
                         width:100%;
+                        &::after {
+                            width:8px;
+                            height:60px;
+                        }
                     }
+                    h3 {font-size: 15px;}
                 }
                 .bot_line {
                     width:80%;
                     right:80px;
+                    h2 {font-size: 15px;}
+                    ul {
+                        li {
+                            font-size: 10px;
+                            margin: 10px 0;
+                        }
+                    }
+                }
+            }
+        }
+        .container {
+            .artwork {
+                .left_text {
+                    .box {
+                        .title {
+                            font-size: 15px;
+                            .num {font-size: 15px;}
+                        }
+                        ul {
+                            li {font-size: 10px;}
+                        }
+                        .address {
+                            a {font-size: 15px;}
+                        }
+                    }
+                }
+            }
+            .contact {
+                .center {
+                    .bg {font-size: 150px;}
+                    .text_box {
+                        .contact_me {
+                            font-size: 80px;
+                        }
+                        .context {
+                            h2 {font-size: 15px;}
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:600px) {
+    #wrap {
+        .main_banner {
+            .center {
+                .top_line {
+                    h2 {}
+                    h3 {}
+                }
+            }
+        }
+        .container {
+            .contact {
+                .center {
+                    .text_box {
+                        .contact_me {
+                            font-size: 60px;
+                        }
+                    }
                 }
             }
         }
